--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         if (text.includes("얼마") || text.includes("받을 수") || text.includes("계산")) {
             step = 1;
             addBotMessage(
-                "가구 유형을 확인하고 있어요...", 
+                "가구 유형을 확인 중이에요...", 
                 "네, 제가 계산해 드릴게요! 🧮<br>혹시 <b>혼자 사시나요, 아니면 짝꿍(배우자)이 있으신가요?</b>"
             );
             updateMenu(["혼자 살아요", "배우자 있어요", "처음으로"]);
