--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 userType = 'single';
                 addBotMessage(
                     "2025년 기준(228만원)을 가져왔어요!", 
-                    "알겠어요! 그럼 <b>한 달 소득(월급+재산환산액)</b>이 대략 얼마 정도 되세요?<br>편하게 숫자만 적어주세요. ex)십만 원 -> 10"
+                    "네! 그럼 <b>한 달 소득(월급+재산환산액)</b>이 대략 얼마 정도 되세요?<br>편하게 숫자만 적어주세요. ex)십만 원 -> 10"
                 );
             } else if (text.includes("배우자")) {
                 userType = 'couple';
