--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>기초연금 365 (2025년형)</title>
     <style>
-        /* 1. 폰트: 페이퍼로지 (깔끔하고 귀여운 느낌) */
+        /* 1. 폰트: 페이퍼로지8 (깔끔하고 귀여운 느낌) */
         @font-face {
             font-family: 'Paperlogy';
             src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408-3@1.0/Paperlogy-5Medium.woff2') format('woff2');
