--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
     // 초기 실행
     window.onload = function() {
-        addBotMessage(null, "안녕하세요 어르신! 반가워요 🐥<br>저는 <b>2025년 최신 기준</b>을 공부한 <b>'연금 삐약이'</b>에요.<br><br>올해 기준이 많이 올랐대요!<br>아래 버튼을 누르거나 궁금한 걸 물어보세요.");
+        addBotMessage(null, "안녕하세요 어르신! 반가워요 🐥<br>저는 <b>2025년 최신 기초연금제</b>를 공부한 <b>'연금 삐약이'</b>에요.<br><br>올해 기준이 많이 올랐대요!<br>아래 버튼을 누르거나 궁금한 걸 물어보세요.");
     };
 
     function sendMenu(text) {
