--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
     // 초기 실행
     window.onload = function() {
-        addBotMessage(null, "안녕하세요 어르신! 반가워요 🐥<br>저는 <b>2025년 최신 기초연금제</b>를 공부한 <b>'연금 삐약이'</b>에요.<br><br>올해 기준이 많이 올랐대요!<br>아래 버튼을 누르거나 궁금한 걸 물어보세요.");
+        addBotMessage(null, "안녕하세요 어르신! 반가워요 🐥<br>저는 <b>2025년 최신 기초연금제</b>를 공부한 <b>'연금 삐약이'</b>에요.<br><br>올해 기준이 많이 올랐으니<br>아래 버튼을 눌러 궁금한 것들을 물어보세요.");
     };
 
     function sendMenu(text) {
@@ -346,7 +346,7 @@
             step = 1;
             addBotMessage(
                 "2025년 가구 유형별 기준을 준비 중...", 
-                "네! 올해 기준이 올라서 받으실 수 있는지 확인해 드릴게요.<br>혹시 <b>혼자 사시나요, 아니면 배우자가 있으신가요?</b>"
+                "네! 올해 기준에 따라 기초연금 수령 여부를 확인해 드릴게요!<br>혹시 <b>혼자 사시나요, 아니면 배우자가 있으신가요?</b>"
             );
             updateMenu(["혼자 살아요", "배우자 있어요", "처음으로"]);
             return;
@@ -358,13 +358,13 @@
                 userType = 'single';
                 addBotMessage(
                     "2025년 단독가구 기준(228만원) 적용!", 
-                    "알겠어요! 올해 혼자 사시는 분은 <b>228만 원</b>보다 소득이 적으면 받으세요.<br><br><b>한 달 소득(월급+재산환산액)</b>이 대략 얼마인지 숫자만 적어주세요."
+                    "알겠어요! 올해 혼자 사시는 분은 <b>228만 원</b>보다 소득이 적으면 기초연금 수령 대상자에 해당해요.<br><br><b>한 달 소득(월급+재산환산액)</b>이 대략 얼마인지 숫자만 적어주세요."
                 );
             } else if (text.includes("배우자")) {
                 userType = 'couple';
                 addBotMessage(
                     "2025년 부부가구 기준(364.8만원) 적용!", 
-                    "알겠어요! 올해 두 분 합쳐서 <b>364만 8천 원</b>보다 적으면 받으세요.<br><br><b>부부 합산 월 소득</b>이 대략 얼마인지 숫자만 적어주세요."
+                    "알겠어요! 올해 두 분 합쳐서 <b>364만 8천 원</b>보다 적으면 기초연금 수령 대상자에 해당해요.<br><br><b>부부 합산 월 소득</b>이 대략 얼마인지 숫자만 적어주세요. ex) 10만원 -> 10"
                 );
             } else {
                 addBotMessage(null, "혼자 사시는지, 배우자가 있으신지 버튼을 눌러주세요 🐥");
@@ -398,7 +398,7 @@
 
             if (income <= limit) {
                 thought = "계산 결과: 2025년 기준 충족! (수급 가능)";
-                answer = `<b>축하드려요! 받으실 수 있어요!</b> 🎉<br>입력하신 소득이 올해 기준(${limitText})보다 적거든요.<br>매달 약 <b>34만 원대</b>를 받으실 거예요!`;
+                answer = `<b>기초연금 수령 대상자에 해당되세요!</b> 🎉<br>입력하신 소득이 올해 기준(${limitText})보다 적거든요.<br>매달 약 <b>34만 원대</b>를 받으실 거예요!`;
             } else {
                 thought = "계산 결과: 기준 초과... (공제 확인 필요)";
                 answer = `기준(${limitText})보다 소득이 조금 높게 나오네요.<br>하지만 <b>금융재산 공제(2,000만원)</b> 등을 적용하면 달라질 수 있으니 꼭 신청해보세요!`;
@@ -415,7 +415,7 @@
         if (text.includes("차") || text.includes("자동차")) {
             addBotMessage(
                 "2025 사업안내 [재산조사] 항목 확인 중...",
-                "자동차가 있어도 되는데요, 혹시 <b>4,000만 원 이상</b>인 고급 승용차인가요?<br>그렇다면 월 소득으로 100% 잡혀서 받기 어려울 수 있어요 😥"
+                "자동차가 있어도 되는데요, 혹시 <b>4,000만 원 이상</b>인 승용차를 보유 중이신가요?<br>그렇다면 월 소득으로 100% 잡혀서 받기 어려울 수 있어요 😥"
             );
         }
         else if (text.includes("자식") || text.includes("자녀")) {
