--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                 step = 2; 
             } else if (text.includes("배우자") || text.includes("부부") || text.includes("있어")) {
                 userType = 'couple';
-                addBotMessage("2025년 부부 기준", "알겠습니다. 부부 합쳐서 <b>364만 8천 원</b>보다 소득이 적으면 받으십니다.<br><b>두 분 합쳐서 한 달 소득</b>이 얼마인가요? (숫자만)");
+                addBotMessage("2025년 부부 기준", "알겠습니다. 부부 합쳐서 <b>364만 8천 원</b>보다 소득이 적으면 받으실 수 있어요.<br><b>두 분 합쳐서 한 달 소득</b>이 얼마인가요? (숫자만)");
                 updateMenu(["잘 모르겠어", "처음으로"]);
                 step = 2; 
             } else { addBotMessage(null, "혼자 사시는지, 배우자가 있으신지 버튼을 눌러주세요 🐥"); }
