--- a/기초연금 365.html
+++ b/기초연금 365.html
@@ -282,7 +282,7 @@
 
 <script>
     const chatBox = document.getElementById('chatBox');
-    // 2025년 기준액
+    // 2025년 선정기준액
     const LIMIT_SINGLE = 2280000;
     const LIMIT_COUPLE = 3648000;
 
@@ -503,7 +503,7 @@
         addBotMessage("의도 파악 중...", "죄송합니다, 제가 아직 배우는 중이라 잘 모르겠어요 😅<br><b>[📚 질문 목록 보여줘]</b> 버튼을 눌러서 찾아보시겠어요?");
     }
 
-    // ★ 수정된 계산 로직 (구간 선택형)
+    // ★ 수정된 계산 로직 (구간 선택형 - 50만/100만/100만이상)
     function handleCalculator(text) {
         // [STEP 1] 가구 유형 선택 -> 소득 버튼 보여주기
         if (step === 1) {
@@ -533,23 +533,15 @@
             const limitText = userType === 'single' ? "228만 원" : "364만 8천 원";
 
             if (text.includes("50만원")) {
-                addBotMessage("계산 결과: 매우 안전함", `<b>걱정 마세요! 무조건 받으십니다!</b> 🎉<br>생활비 하시기에 빠듯하시겠지만...<br>소득이 기준(${limitText})보다 훨씬 적으셔서 <b style="color:blue">100% 합격권</b>입니다.<br>꼭 신청하세요!`);
+                addBotMessage("계산 결과: 매우 안전함", `<b>정말 알뜰살뜰 지내고 계시네요 😢</b><br>이 정도면 2025년 기준(${limitText})보다 훨씬 적으셔서<br><b style="color:blue">거의 100% 받으실 수 있습니다.</b><br>걱정 말고 꼭 신청하세요!`);
             } else if (text.includes("100만원 이하")) {
-                addBotMessage("계산 결과: 안전함", `<b>네! 충분히 받으실 수 있습니다!</b> 🙆‍♂️<br>기준 금액(${limitText})보다 적으셔서 안정권입니다.<br>재산이 수십 억 있지 않은 이상 합격하실 거예요.`);
+                addBotMessage("계산 결과: 안전함", `<b>네! 아주 좋습니다!</b> 🙆‍♂️<br>기준 금액(${limitText})보다 한참 낮으셔서 아주 <b>안전권</b>입니다.<br>재산이 수십 억 있지 않은 이상 충분히 받으십니다.<br>안심하고 신청하세요!`);
             } else if (text.includes("100만원 이상")) {
-                addBotMessage("계산 결과: 확인 필요", `<b>100만 원이 넘으시는군요!</b><br>그래도 기준(${limitText})만 안 넘으면 받으실 수 있어요.<br>혹시 재산이 많거나 다른 소득이 더 있다면 주민센터에서 <b>정확한 상담</b>을 한번 받아보세요! 🙏`);
+                addBotMessage("계산 결과: 확인 필요", `<b>100만 원이 넘으시는군요!</b><br>그래도 기준(${limitText})보다는 적을 가능성이 높아요.<br>다만, <b>재산(집, 차)이 많으면</b> 아슬아슬할 수 있으니 주민센터에서 정확히 상담받는 게 좋아요! 🙏`);
             } else {
-                // 혹시 숫자를 직접 쳤을 경우 대비
-                const inputNum = parseInt(text.replace(/[^0-9]/g, ''));
-                if (!isNaN(inputNum)) {
-                   const income = inputNum * 10000;
-                   const limit = userType === 'single' ? LIMIT_SINGLE : LIMIT_COUPLE;
-                   if (income <= limit) addBotMessage("계산 결과: 합격 가능성", `계산해보니 기준(${limitText})보다 적으시네요.<br>받으실 가능성이 높습니다! 🎉`);
-                   else addBotMessage("계산 결과: 초과", `기준(${limitText})보다 조금 높으시네요.<br>하지만 재산 공제 등을 받으면 가능할 수도 있으니 상담받아보세요.`);
-                } else {
-                    addBotMessage(null, "아래 버튼 중에서 하나를 골라주세요 👇");
-                }
-                return; // 스텝 유지
+                // 혹시 버튼 안 누르고 텍스트 입력했을 경우 대비
+                 addBotMessage(null, "아래 버튼 중에서 하나를 골라주세요 👇");
+                 return; // 스텝 유지
             }
             
             // 계산 끝나면 초기화
@@ -558,7 +550,7 @@
             return;
         }
     }
-<script>
+</script>
 
-<body>
-<html>
+</body>
+</html>
