--- a/기초연금 365.html
+++ b/기초연금 365.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>기초연금 365 (선택형)</title>
+    <title>기초연금 365 (심화상담형)</title>
     <style>
         /* 1. 폰트 및 기본 스타일 */
         @font-face {
@@ -190,7 +190,7 @@
             margin-top: 5px;
         }
 
-        /* 하단 고정 메뉴 (좌우 스크롤 가능) */
+        /* 하단 고정 메뉴 */
         .fixed-menu {
             padding: 12px 15px;
             background: #ffffff;
@@ -204,7 +204,7 @@
 
         .menu-btn {
             font-family: 'Paperlogy', sans-serif;
-            flex: 0 0 auto; /* 버튼 크기 자동 조절 */
+            flex: 0 0 auto;
             background: #EBF4FF;
             color: #0055FF;
             border: 1px solid #CCE0FF;
@@ -282,39 +282,42 @@
 
 <script>
     const chatBox = document.getElementById('chatBox');
-    // 2025년 선정기준액
     const LIMIT_SINGLE = 2280000;
     const LIMIT_COUPLE = 3648000;
 
     let step = 0; 
     let userType = ''; 
 
+    // ★ [데이터베이스] - 상세하고 구체적인 답변으로 업데이트 완료
     const categories = {
         "대상/자격": [
-            { q: "몇 살부터 신청할 수 있어?", a: "만 65세 생일이 지나셔야 합니다.<br>올해(2025년)는 <b>1960년생</b>이신 분들이 생일 지나면 대상자가 되십니다! 🎂", thought: "수급 연령 확인" },
-            { q: "자식이 돈 잘 버는데 나도 받아도 돼?", a: "<b>네, 당연히 됩니다!</b> 🙆‍♂️<br>기초연금은 자녀가 아무리 부자여도 상관없습니다.<br>오직 어르신과 배우자분의 형편만 봅니다. 눈치 보지 마세요! 😊", thought: "부양의무자 기준 폐지" },
-            { q: "공무원 연금 받는데 신청해도 돼?", a: "아쉽게도 공무원, 사학, 군인, 우체국 연금 수급자분들은 <b>원칙적으로 못 받으십니다.</b> 😢<br>법적으로 제외 대상이라 어쩔 수가 없습니다.", thought: "직역연금 제외 안내" },
-            { q: "기초수급자인데 중복으로 받아도 돼?", a: "받으실 수는 있는데, <b>기초연금 받은 만큼 생계급여가 깎일 수 있어요.</b><br>오히려 손해일 수 있으니, 신청 전에 꼭 담당자한테 물어보셔야 해요! 🚨", thought: "중복 감액 주의" },
-            { q: "주소랑 사는 곳이 다른데 어떻게 해?", a: "실제로 사시는 곳이 중요해요.<br>하지만 주소가 다르면 오해받을 수 있으니, <b>지금 사시는 곳 주민센터</b>에 가셔서 상황을 솔직하게 말씀하시고 상담받는 게 제일 안전해요.", thought: "실거주지 원칙" }
+            { q: "몇 살부터 신청할 수 있어?", a: "기초연금은 <b>만 65세 생일</b>이 속한 달의 1개월 전부터 신청 가능합니다.<br>📅 <b>올해(2025년) 대상자는 1960년생</b>입니다.<br>생신 한 달 전에 미리 주민센터 방문하셔서 신청하세요!", thought: "1960년생 대상 안내" },
+            { q: "자식이 돈 잘 버는데 나도 받아도 돼?", a: "<b>네! 자녀의 소득과 재산은 전혀 보지 않습니다.</b> 🙆‍♂️<br>예전에는 '부양의무자'라고 해서 자식이 잘 살면 못 받았지만, 지금은 폐지되었습니다.<br>오직 <b>신청하시는 어르신과 배우자 분의 형편</b>만 봅니다. 당당하게 신청하세요!", thought: "부양의무자 기준 폐지" },
+            { q: "공무원 연금 받는데 신청해도 돼?", a: "원칙적으로 <b>공무원, 사학, 군인, 별정우체국 연금</b> 수급자 본인과 배우자는 기초연금 대상에서 제외됩니다. 😢<br>단, 연금을 <b>일시금</b>으로 받으셨고 5년이 지났거나, 장애/유족 연금 등 특수한 경우에는 가능할 수 있으니 1355로 꼭 확인해보세요.", thought: "직역연금 예외 사항" },
+            { q: "기초수급자인데 중복으로 받아도 돼?", a: "신청은 가능하지만, <b>신중하셔야 합니다!</b> 🚨<br>기초연금을 받으면 그 금액만큼 <b>생계급여가 삭감</b>될 수 있습니다. (줬다 뺏는 기초연금)<br>오히려 전체 수급액에 변동이 없거나 불리할 수 있으니, 반드시 복지 담당자와 먼저 상의하세요.", thought: "기초수급 중복 감액" },
+            { q: "주소랑 사는 곳이 다른데 어떻게 해?", a: "기초연금은 주소지가 달라도 <b>전국 어느 주민센터에서나 신청 가능합니다!</b><br>다만 거주 불명 등록이 되어 있다면, <b>실제 거주지의 주민센터</b>를 방문해서 전입신고와 함께 상담받으시는 게 가장 빠릅니다.", thought: "전국 신청 가능" },
+            { q: "해외에 오래 나가 있어도 계속 나와?", a: "아니요. ✈️<br>해외에 <b>60일(약 두 달) 이상</b> 연속으로 머무시면 지급이 <b>중단</b>됩니다.<br>입국하시면 다시 신고해야 지급이 재개되니 장기 여행 시에는 주의하세요!", thought: "해외 체류 시 정지" }
         ],
         "재산/소득": [
-            { q: "빚이 있는데 재산에서 빼줘?", a: "그럼요! 은행 대출금은 <b>재산에서 빼드립니다(공제).</b> 📉<br>빚이 있으면 재산이 적게 잡혀서 받으실 확률이 올라가요.<br>단, 개인끼리 빌린 돈은 인정 안 될 수도 있어요.", thought: "부채 차감 안내" },
-            { q: "자녀 집에 얹혀사는데 집값도 포함돼?", a: "자녀 명의 집은 <b>어르신 재산 아니에요!</b> 걱정 마세요.<br>다만 그 집이 6억 넘는 비싼 집이면 '공짜로 사는 이득'을 소득으로 조금 잡긴 해요.", thought: "무료임차소득 안내" },
-            { q: "자동차가 있는데 어떻게 해? 팔아야 해?", a: "아니요, 무조건 파실 필요 없어요! 🚗<br>하지만 <b>4,000만 원 넘는 고급차</b>나 3,000cc 넘는 차가 있으면 탈락하실 수 있어요.<br>오래된 차나 트럭은 괜찮아요.", thought: "차량 기준 안내" },
-            { q: "집이 있는데 받아도 돼?", a: "네, 집 있어도 받으시는 분들 많아요!<br><b>지역별로 집값은 어느 정도 빼주거든요(최대 1억 3,500만 원).</b><br>너무 걱정 말고 일단 신청해 보세요!", thought: "기본재산 공제" },
-            { q: "통장에 돈이 좀 있는데 어떻게 해?", a: "은행 예금은 <b>2,000만 원까지는 봐드려요.</b> (공제)<br>그거 넘는 돈만 소득으로 치니까, 비상금 정도는 괜찮아요! 💰", thought: "금융재산 공제" }
+            { q: "일해서 돈 버는데(월급) 괜찮아?", a: "<b>네! 일하셔도 됩니다!</b> 👷<br>나라에서 어르신들의 근로를 장려하기 위해 <b>월 115만 원</b>까지는 소득에서 아예 빼드립니다.<br>거기에 나머지 금액도 <b>30% 추가 공제</b>를 해줍니다. <br>따라서 꽤 높은 월급을 받으셔도 기초연금 수령이 가능합니다.", thought: "근로소득 공제 혜택" },
+            { q: "빚이 있는데 재산에서 빼줘?", a: "네, <b>은행 대출금</b> 같은 금융기관 부채는 재산에서 빼드립니다(공제). 📉<br>하지만 <b>개인 간에 빌린 돈(사채), 마이너스 통장 한도, 카드 연체금</b> 등은 빚으로 인정해주지 않습니다.<br>임대보증금(전세금) 받은 것도 부채로 인정돼서 재산에서 빠집니다.", thought: "부채 인정 범위" },
+            { q: "자녀 집에 얹혀사는데 집값도 포함돼?", a: "자녀 명의 집은 어르신 재산이 아니므로 <b>기본적으로 포함되지 않습니다.</b><br>단! 자녀 집이 <b>시가표준액 6억 원 이상의 고가 주택</b>이라면, '무료임차소득'이라고 해서 <b>월 39만 원</b>을 어르신 소득으로 잡습니다. (탈락 사유까진 잘 안 됩니다)", thought: "무료임차소득 6억 기준" },
+            { q: "자동차가 있는데 어떻게 해? 팔아야 해?", a: "차량 기준이 좀 엄격합니다. 🚗<br>① <b>차량가액 4,000만 원 이상</b>이거나<br>② <b>배기량 3,000cc 이상</b>인 차가 있으면 탈락 확률이 매우 높습니다.<br>하지만 10년 이상 된 노후 차량이나 생업용 트럭은 재산 산정에서 제외되니 너무 걱정 마세요.", thought: "고급 승용차 기준" },
+            { q: "집이 있는데 받아도 돼?", a: "네! 집 있어도 많이들 받으십니다.<br>사는 지역에 따라 집값의 일부를 재산에서 빼줍니다(기본재산공제).<br>🏠 <b>대도시: 1억 3,500만 원</b><br>🏘️ <b>중소도시: 8,500만 원</b><br>🏡 <b>농어촌: 7,250만 원</b><br>이만큼 빼고 계산하니까 포기하지 마세요!", thought: "지역별 기본재산공제" },
+            { q: "통장에 돈이 좀 있는데 어떻게 해?", a: "은행 예금, 적금, 주식, 보험(해지환급금) 등 금융재산은<br><b>2,000만 원까지는 기본 공제</b>해드립니다. 💰<br>즉, 2,000만 원 넘는 금액만 소득으로 환산되니 비상금 정도는 괜찮습니다.", thought: "금융재산 2천만원 공제" }
         ],
         "신청/방법": [
-            { q: "신청은 어디 가서 해야 해?", a: "가까운 <b>주민센터(행정복지센터)</b>나 <b>국민연금공단</b>으로 가시면 돼요.<br>가실 때 <b>신분증</b>이랑 <b>통장</b>만 딱 챙겨가세요! 🏃‍♂️", thought: "신청 장소 안내" },
-            { q: "몸이 아파서 못 가는데 자식이 대신 해도 돼?", a: "네, 됩니다! 자녀분이나 배우자가 <b>대신 신청(대리 신청)</b>할 수 있어요.<br>대리인 신분증이랑 어르신 도장 챙겨서 보내세요.", thought: "대리 신청 안내" },
-            { q: "이사 갔는데 다시 신청해야 해?", a: "아니요! <b>전입신고만 하시면 알아서 연결돼요.</b><br>따로 신청 안 하셔도 되니까 편하게 계시면 됩니다! 🏠", thought: "전입 연계 안내" },
-            { q: "통장 바꾸고 싶은데 어떻게 해?", a: "주민센터 가시거나 <b>'복지로'</b> 사이트에서 바꾸시면 돼요.<br>압류방지통장(행복지킴이)으로도 바꿀 수 있어요.", thought: "계좌 변경 안내" },
-            { q: "탈락했는데 억울하면 어떻게 해?", a: "너무 억울하시면 <b>'이의신청'</b>이란 걸 할 수 있어요!<br>결과 받고 <b>90일 안에</b> 주민센터 가서 '다시 심사해주세요'라고 하세요. 포기하지 마세요! 💪", thought: "이의신청 안내" }
+            { q: "신청은 어디 가서 해야 해?", a: "세 가지 방법이 있습니다!<br>1️⃣ <b>주소지 관할 주민센터</b> 방문<br>2️⃣ <b>국민연금공단 지사</b> 방문<br>3️⃣ <b>인터넷 '복지로' 사이트</b> (공인인증서 필요)<br>가장 편한 건 신분증, 통장 들고 주민센터 가시는 겁니다! 🏃‍♂️", thought: "신청 경로 3가지" },
+            { q: "몸이 아파서 못 가는데 자식이 대신 해도 돼?", a: "네, <b>대리 신청 가능합니다!</b> 👪<br>배우자, 자녀, 형제자매가 대신 가실 수 있습니다.<br><b>대리인의 신분증</b>, <b>어르신의 도장</b>과 신분증, 통장사본을 챙겨서 위임장을 작성하시면 됩니다.", thought: "대리 신청 서류" },
+            { q: "이사 갔는데 다시 신청해야 해?", a: "아니요! 한 번 선정되셨으면 <b>이사 가셔도 전입신고만 하면 자동으로 유지됩니다.</b> 🏠<br>따로 다시 신청하실 필요 없습니다. 편안하게 지내세요!", thought: "전입 시 자동 유지" },
+            { q: "통장 바꾸고 싶은데 어떻게 해?", a: "통장을 분실하셨거나 압류가 걱정되시면 <b>'행복지킴이 통장'</b>(압류방지통장)을 만드세요.<br>그 후 주민센터나 '복지로'에서 계좌 변경 신청을 하시면 됩니다.", thought: "계좌 변경 및 압류방지" },
+            { q: "탈락했는데 억울하면 어떻게 해?", a: "결과 통지서를 받은 날로부터 <b>90일 이내</b>에 <b>'이의신청'</b>을 하실 수 있습니다.<br>재산이 잘못 잡혔거나 억울한 점이 있다면 증빙 서류를 준비해서 주민센터에 다시 검토를 요청하세요. 절대 그냥 넘어가지 마세요! 💪", thought: "이의신청 기한 90일" }
         ],
         "금액/지급": [
-            { q: "부부가 다 받으면 깎인다는데 진짜야?", a: "네, 맞아요. 두 분 다 받으시면 <b>각각 20%씩 깎여요.</b><br>그래도 두 분 합치면 50만 원 넘으니까, 한 분만 받는 것보단 훨씬 나아요! 💑", thought: "부부 감액 안내" },
-            { q: "돈은 며칠에 들어와?", a: "매달 <b>25일</b>에 통장으로 딱! 들어옵니다. 📅<br>빨간 날이면 그 전날 미리 넣어드려요.", thought: "지급일 안내" },
-            { q: "국민연금이랑 같이 받아도 돼?", a: "네, 같이 받아도 돼요!<br>근데 국민연금을 많이(약 50만 원 이상) 받으시면 기초연금이 <b>조금 줄어들 수는 있어요.</b><br>정확한 건 신청해 봐야 알아요.", thought: "국민연금 연계" }
+            { q: "부부가 다 받으면 깎인다는데 진짜야?", a: "네, 사실입니다. 👫<br>부부가 모두 기초연금을 받으시면 <b>각각 20%씩 감액</b>하여 지급합니다.<br>하지만 감액되더라도 부부 합산 <b>약 55만 원</b>(2025년 예상) 정도 되므로, 한 분만 받는 것보다는 훨씬 이득입니다!", thought: "부부 감액 20%" },
+            { q: "돈은 며칠에 들어와?", a: "기초연금은 매달 <b>25일</b>에 지급됩니다. 📅<br>만약 25일이 토요일이나 공휴일이면, <b>그 직전 평일</b>에 미리 입금해 드립니다.", thought: "매월 25일 지급" },
+            { q: "국민연금이랑 같이 받아도 돼?", a: "네, 같이 받으실 수 있습니다!<br>다만, 국민연금 수령액이 기초연금 기준액의 1.5배(약 51만 원)를 넘으면 <b>기초연금이 일부 깎일 수 있습니다.</b> (국민연금 연계 감액)<br>그래도 합쳐서 받는 총액은 더 많으니 걱정 마세요.", thought: "국민연금 연계 감액" },
+            { q: "기초연금 받으면 휴대폰 요금도 할인돼?", a: "<b>네! 아주 중요한 혜택입니다!</b> 📱<br>기초연금 수급자는 통신비 <b>월 최대 11,000원</b>(청구액의 50%)을 감면받을 수 있습니다.<br>자동 할인이 아니니, 통신사 고객센터(114)나 주민센터에 꼭 따로 신청하셔야 해요!", thought: "이동통신비 감면 꿀팁" }
         ]
     };
 
@@ -495,6 +498,9 @@
                     else if(text.includes("자식") && item.q.includes("자식")) { addBotMessage(item.thought, item.a); found = true; }
                     else if(text.includes("신청") && item.q.includes("신청")) { addBotMessage(item.thought, item.a); found = true; }
                     else if(text.includes("공무원") && item.q.includes("공무원")) { addBotMessage(item.thought, item.a); found = true; }
+                    else if(text.includes("일") && item.q.includes("일")) { addBotMessage(item.thought, item.a); found = true; }
+                    else if(text.includes("월급") && item.q.includes("일")) { addBotMessage(item.thought, item.a); found = true; }
+                    else if(text.includes("휴대폰") && item.q.includes("휴대폰")) { addBotMessage(item.thought, item.a); found = true; }
                 }
             });
         });
@@ -503,9 +509,8 @@
         addBotMessage("의도 파악 중...", "죄송합니다, 제가 아직 배우는 중이라 잘 모르겠어요 😅<br><b>[📚 질문 목록 보여줘]</b> 버튼을 눌러서 찾아보시겠어요?");
     }
 
-    // ★ 수정된 계산 로직 (구간 선택형 - 50만/100만/100만이상)
+    // 소득 구간 선택형 계산 로직 (유지)
     function handleCalculator(text) {
-        // [STEP 1] 가구 유형 선택 -> 소득 버튼 보여주기
         if (step === 1) {
             if (text.includes("혼자") || text.includes("독거")) {
                 userType = 'single';
@@ -521,7 +526,6 @@
             return;
         }
 
-        // [STEP 2] 소득 구간 선택 결과
         if (step === 2) {
             if (text.includes("처음")) {
                 step = 0;
@@ -539,12 +543,10 @@
             } else if (text.includes("100만원 이상")) {
                 addBotMessage("계산 결과: 확인 필요", `<b>100만 원이 넘으시는군요!</b><br>그래도 기준(${limitText})보다는 적을 가능성이 높아요.<br>다만, <b>재산(집, 차)이 많으면</b> 아슬아슬할 수 있으니 주민센터에서 정확히 상담받는 게 좋아요! 🙏`);
             } else {
-                // 혹시 버튼 안 누르고 텍스트 입력했을 경우 대비
                  addBotMessage(null, "아래 버튼 중에서 하나를 골라주세요 👇");
-                 return; // 스텝 유지
+                 return; 
             }
             
-            // 계산 끝나면 초기화
             step = 0;
             updateMenu(["💰 나 얼마 받을 수 있어?", "📚 질문 목록 보여줘"]);
             return;
